# vcpkg-project-ci-exmpale

./: CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake.yaml  install-ninja.yaml  ninja.yaml
